# CTkNavbar

./: README.md  ctk_navbar.py  pyproject.toml
ctknavbar/: __init__.py
examples/: how_to_use.py
