[tool.poetry]
name = "ctknavbar"
version = "0.1.0"
description = "Simple navigation bar view for customtkinter library"
authors = ["nkeff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
